Update csr example app

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-title" content="React Modal Sheet" />
     <meta name="application-name" content="React Modal Sheet" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
@@ -26,6 +26,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="./index.tsx" type="module"></script>
+    <script src="./src/index.tsx" type="module"></script>
   </body>
 </html>
