Turn example app into pwa

--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,8 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- PWA options -->
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-title" content="React Modal Sheet" />
     <meta name="application-name" content="React Modal Sheet" />
@@ -14,13 +16,19 @@
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
-    />
+      />
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/pwa-192x192.png">
+    <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <title>React Modal Sheet Playground</title>
   </head>
 
